--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "watch": "nodemon ./start.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "nodemon": "^2.0.4",
     "pug": "^3.0.0"
   }
 }
