--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "http-auth": "^4.1.2",
+    "mongoose": "^5.10.2",
     "nodemon": "^2.0.4",
     "pug": "^3.0.0"
   }
